@@ -1,5 +1,11 @@
 2008-11-24  Brian Curry  <http://www.raiazome.com/Brian_Curry>
 
+	* modules/crossbar.pl (UserCanEditCrossbar): Deleted.
+	(CrossbarInit): Permit non-administrators to edit crossbar pages.
+	(GetEditFormCrossbar): Added a message describing crossbar usage. 
+
+2008-11-24  Brian Curry  <http://www.raiazome.com/Brian_Curry>
+
 	* modules/creole.pl (CreoleRule): Implemented handling of so-called
 	"interlinks" -- i.e., links to external Wikis via the "$InterMap"
 	page. (So, Creole syntax is now embeddable within interlinks!)
